tests/compile-fail/integration__integration__difficulty__diff_switch_in_const_fn_call.snap
---
source: tests/integration/difficulty.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:8:1
   │  
 8 │ ╭ const int foo(int a) {
 9 │ │     return 2 * a;
10 │ │ }
   │ ╰─^ not supported by old-format ECL files

error: feature not supported by format
   ┌─ <input>:13:10
   │
13 │     I0 = foo(2:3:4:5);
   │          ^^^^^^^^^^^^ this expression not supported by format


